--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
+
+# Publish
 CLIENT_ID=
 CLIENT_SECRET=
 AUTH_URI=
 API_URI=
 REFRESH_TOKEN=
+
+# MessagingAPI
 MESSAGING_CHANNEL_ID=
+
+# DatastoreAPI
+DATASTORE_CHANNEL_ID=
+DATASTORE_OBJECT_ID=
