--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,18 +11,15 @@ jobs:
 
       - run:
           name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
+          command:
+            pip install --upgrade pip
             pip install -r packages_requirements.txt
 
       - run:
           name: run tests
-          command: |
-            . venv/bin/activate
-            python setup.py test
+          command: python3 setup.py test
 
       - store_artifacts:
           path: test-reports
           destination: test-reports
-          
+
