--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: install dependencies
           command:
-            pip install --upgrade pip
+            pip install --upgrade pip &&
             pip install -r packages_requirements.txt
 
       - run:
