--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,13 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "packages_requirements.txt" }}
       - run:
           name: install dependencies
-          command:
-            pip install -U pip &&
+          command: |
+          . venv/bin/activate
+            pip install --upgrade pip setuptools
+            pip install cython
+            pip install .
+            pip install scipy
+            pip install --upgrade pip
             pip install -r packages_requirements.txt
       - save_cache: # special step to save dependency cache
           key: deps1-{{ .Branch }}-{{ checksum "packages_requirements.txt" }}
