--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,16 @@ jobs:
       - run:
           name: install dependencies
           command: |
+          python3 -m venv venv
           . venv/bin/activate
-            pip install --upgrade pip setuptools
-            pip install cython
-            pip install .
-            pip install scipy
-            pip install --upgrade pip
-            pip install -r packages_requirements.txt
+          sudo apt-get update
+          pip install --upgrade pip setuptools
+          pip install cython
+          pip install .
+          pip install scipy
+          pip install --upgrade pip
+          pip install -r packages_requirements.txt
+
       - save_cache: # special step to save dependency cache
           key: deps1-{{ .Branch }}-{{ checksum "packages_requirements.txt" }}
           paths:
